...
            android:text="View Event QR Codes"
            app:cornerRadius="7dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/additional_actions_button"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/red"
            android:fontFamily="@font/roboto"
            android:text="Leave Event"
            app:cornerRadius="7dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"


            />
...
