...

            <Button
                android:id="@+id/edit_details_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="Edit Details"
                app:cornerRadius="10dp"
                android:layout_marginStart="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
...
