...
                    android:id="@+id/delete_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14sp"
                    android:layout_marginEnd="20sp"
                    android:fontFamily="@font/roboto"
                    android:text="Delete"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/admin_cancel_button"
...
